# rsocks

./: Cargo.toml  LICENSE  README.md  build.rs
proto/: rsocks.proto
src/: dns_resolver.rs  errors.rs  main.rs  transport.rs
src/codecs/: dns.rs  mod.rs  socks5.rs
src/dns_resolver/: error.rs  parser.rs  proto.rs  resolver.rs
src/parser/: dns.rs  socks5.rs
src/proto/: dns.rs  mod.rs  socks5.rs
