[package]
name = "rsocks"
version = "0.2.0"
authors = ["zzzdong <kuwater@163.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4"
nom = "7"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
