[package]
name = "rsocks"
version = "0.2.0"
authors = ["zzzdong <kuwater@163.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
futures = "0.3"
futures-util = "0.3"
nom = "7"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
