[package]
name = "rsocks"
version = "0.2.0"
authors = ["zzzdong <kuwater@163.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
clap = { version = "3.1", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
nom = "7"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["std", "env-filter"] }
